--- a/demo/branding.html
+++ b/demo/branding.html
@@ -198,8 +198,8 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/branding.html#navigationColours">
-                                <span class="menu-text">Navigation colors</span>
+                            <a href="/emag-apps-ui-kit/demo/branding.html#navigationThemes">
+                                <span class="menu-text">Navigation themes</span>
                             </a>
                         </li>
                         <li class="menu-item">
@@ -626,26 +626,40 @@
                                 </div>
                             </div>
                         </section>
-                        <section id="navigationColours" class="pad-top-40">
+                        <section id="navigationThemes" class="pad-top-40">
                             <div class="show-panel">
                                 <div class="show-panel-body">
-                                    <h2><strong>Navigation colors</strong></h2>
+                                    <h2><strong>Navigation themes</strong></h2>
                                     <div class="pad-sep-20">
                                         <div class="row">
                                             <div class="col-lg-12">
 
                                                 <div class="alert alert-info" role="alert"><i class="fa fa-info-circle"></i>
-                                                    To change the navigation colors, use <mark>navbar-inverse</mark> alone or in combination with one of the following classes: <mark>'navbar-blue', 'navbar-green', 'navbar-purple', 'navbar-cyan', 'navbar-brown'</mark>. For sidebar use one of the following classes: <mark>'sidebar-inverse', 'sidebar-blue', 'sidebar-green', 'sidebar-purple', 'sidebar-cyan', 'sidebar-brown'</mark>.
+                                                    To change the navigation theme, use <mark>navbar-inverse</mark> alone or in combination with one of the following classes: <mark>'navbar-blue', 'navbar-green', 'navbar-purple', 'navbar-cyan', 'navbar-brown'</mark>. For sidebar use one of the following classes: <mark>'sidebar-inverse', 'sidebar-blue', 'sidebar-green', 'sidebar-purple', 'sidebar-cyan', 'sidebar-brown'</mark>.
                                                 </div>
                                             </div>
                                             <div class="col-lg-12">
-                                                <button type="button" class="btn btn-default scheme-inverse">Inverse</button>
-                                                <button type="button" class="btn btn-default scheme-blue">Blue</button>
-                                                <button type="button" class="btn btn-default scheme-green">Green</button>
-                                                <button type="button" class="btn btn-default scheme-purple">Purple</button>
-                                                <button type="button" class="btn btn-default scheme-cyan">Cyan</button>
-                                                <button type="button" class="btn btn-default scheme-brown">Brown</button>
-                                                <button type="button" class="btn btn-default scheme-default">Default</button>
+                                                <p><strong>Inverse theme</strong><button type="button" class="btn btn-default scheme-inverse mg-15 no-margin-top-bottom">Apply</button></p>
+                                                <img src="img/inverse-theme-preview.png" alt="Inverse theme" class="img-responsive mg-50 no-margin-top no-margin-left-right">
+
+                                                <p><strong>Blue theme</strong> <button type="button" class="btn btn-default scheme-blue mg-15 no-margin-top-bottom">Apply</button></p>
+                                                <img src="img/blue-theme-preview.png" alt="Blue theme" class="img-responsive mg-50 no-margin-top no-margin-left-right">
+
+                                                <p><strong>Green theme</strong> <button type="button" class="btn btn-default scheme-green mg-15 no-margin-top-bottom">Apply</button></p>
+                                                <img src="img/green-theme-preview.png" alt="Green theme" class="img-responsive mg-50 no-margin-top no-margin-left-right">
+
+                                                <p><strong>Purple theme</strong> <button type="button" class="btn btn-default scheme-purple mg-15 no-margin-top-bottom">Apply</button></p>
+                                                <img src="img/purple-theme-preview.png" alt="Purple theme" class="img-responsive mg-50 no-margin-top no-margin-left-right">
+
+                                                <p><strong>Cyan theme</strong> <button type="button" class="btn btn-default scheme-cyan mg-15 no-margin-top-bottom">Apply</button></p>
+                                                <img src="img/cyan-theme-preview.png" alt="Cyan theme" class="img-responsive mg-50 no-margin-top no-margin-left-right">
+
+                                                <p><strong>Brown theme</strong> <button type="button" class="btn btn-default scheme-brown mg-15 no-margin-top-bottom">Apply</button></p>
+                                                <img src="img/brown-theme-preview.png" alt="Brown theme" class="img-responsive mg-50 no-margin-top no-margin-left-right">
+
+                                                <p><strong>Default theme</strong> <button type="button" class="btn btn-default scheme-default mg-15 no-margin-top-bottom">Apply</button></p>
+                                                <img src="img/default-theme-preview.png" alt="Default theme" class="img-responsive">
+
                                             </div>
                                         </div>
                                     </div>
