--- a/demo/plugin_wysiwyg.html
+++ b/demo/plugin_wysiwyg.html
@@ -202,8 +202,8 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="/emag-apps-ui-kit/demo/branding.html#navigationColours">
-                                <span class="menu-text">Navigation colors</span>
+                            <a href="/emag-apps-ui-kit/demo/branding.html#navigationThemes">
+                                <span class="menu-text">Navigation themes</span>
                             </a>
                         </li>
                         <li class="menu-item">
