Added jqGrid with lot of columns and data formatters

--- a/demo/branding.html
+++ b/demo/branding.html
@@ -389,8 +389,18 @@
                                     </a>
                                 </li>
                                 <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/plugin_jqgrid.html#jqGrid-with-no-data">
+                                        <span class="menu-text">With no data</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
                                     <a href="/emag-apps-ui-kit/demo/plugin_jqgrid.html#jqGrid-with-data-formatters">
                                         <span class="menu-text">With data formatters</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/plugin_jqgrid.html#jqGrid-with-lot-of-columns-and-data-formatters">
+                                        <span class="menu-text">With lot of columns and data formatters</span>
                                     </a>
                                 </li>
                             </ul>
