Added charts and stats page

--- a/demo/branding.html
+++ b/demo/branding.html
@@ -471,14 +471,31 @@
                             </a>
                         </li>
 
-
-
-
                         <li class="menu-item">
                             <a href="/emag-apps-ui-kit/demo/plugin_wysiwyg.html">
                                 <span class="menu-text">Wysiwyg editor</span>
                             </a>
                         </li>
+
+                        <li class="menu-item menu-item-has-children">
+                            <a href="#">
+                                <span class="menu-text">Stats</span>
+                            </a>
+                            <ul class="sidebar-submenu">
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/plugin_stats.html">
+                                        <span class="menu-text">Value box</span>
+                                    </a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="/emag-apps-ui-kit/demo/plugin_stats.html#charts">
+                                        <span class="menu-text">Charts</span>
+                                    </a>
+                                </li>
+
+                            </ul>
+                        </li>
+
                     </ul>
                 </div>
             </li>
