Bugfix(UI-KIT): Modified button CODE

--- a/demo/plugin_data_formatters.html
+++ b/demo/plugin_data_formatters.html
@@ -586,7 +586,7 @@
                             <h2><strong>Data formatters</strong></h2>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><b>Demo</b></h4>
                                     </div>
