--- a/demo/plugin_datetime.html
+++ b/demo/plugin_datetime.html
@@ -596,7 +596,7 @@
                             </div>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><b>Simple Date Picker</b></h4>
                                     </div>
@@ -645,7 +645,7 @@
                             </div>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><b>Time Picker</b></h4>
                                     </div>
@@ -692,7 +692,7 @@
                             </div>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><b>Date/Time Picker</b></h4>
                                     </div>
@@ -739,7 +739,7 @@
                             </div>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><b>Date Range Picker</b></h4>
                                     </div>
@@ -787,7 +787,7 @@
                             </div>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><b>Date/Time Range Picker</b></h4>
                                     </div>
@@ -852,7 +852,7 @@
 
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><strong>Standard</strong></h4>
                                     </div>
@@ -906,7 +906,7 @@
                             </div>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><strong>Standard with value</strong></h4>
                                     </div>
@@ -960,7 +960,7 @@
                             </div>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><strong>Standard with format</strong></h4>
                                     </div>
@@ -1015,7 +1015,7 @@
                             </div>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><strong>Standard with predefined intervals</strong></h4>
                                     </div>
@@ -1070,7 +1070,7 @@
                             </div>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><strong>Standard with predefined intervals whitout calendars</strong></h4>
                                     </div>
