--- a/demo/plugin_fancytree.html
+++ b/demo/plugin_fancytree.html
@@ -593,7 +593,7 @@
                             </div>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><b>In page</b></h4>
                                     </div>
@@ -633,7 +633,7 @@
                             </div>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><b>Category tree</b></h4>
                                     </div>
@@ -729,7 +729,7 @@
                             </div>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><b>Category tree disabled</b></h4>
                                     </div>
