--- a/demo/plugin_jqgrid.html
+++ b/demo/plugin_jqgrid.html
@@ -598,7 +598,7 @@
                             <a href="#" name="jqGrid-basic" class="title-anchor">&nbsp;</a>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><strong>jqGrid basic</strong></h4>
                                     </div>
@@ -641,7 +641,7 @@
                             <a href="#" name="jqGrid-with-sticky-panels" class="title-anchor">&nbsp;</a>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><strong>jqGrid with sticky panels</strong></h4>
                                     </div>
@@ -684,7 +684,7 @@
                             <a href="#" name="jqGrid-with-column-chooser" class="title-anchor">&nbsp;</a>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><strong>jqGrid with column chooser</strong></h4>
                                     </div>
@@ -733,7 +733,7 @@
                             <a href="#" name="jqGrid-with-selectable-rows" class="title-anchor">&nbsp;</a>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><strong>jgGrid with selectable rows</strong></h4>
                                     </div>
@@ -785,7 +785,7 @@
                             <a href="#" name="jqGrid-ierarchical-elements-tree" class="title-anchor">&nbsp;</a>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><strong>jqGrid with ierarchical elements (Tree)</strong></h4>
                                     </div>
@@ -828,7 +828,7 @@
                             <a href="#" name="jqGrid-with-subgrid" class="title-anchor">&nbsp;</a>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><strong>jqGrid with subgrid</strong></h4>
                                     </div>
@@ -871,7 +871,7 @@
                             <a href="#" name="jqGrid-with-inline-editing" class="title-anchor">&nbsp;</a>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><strong>jqGrid with inline editing</strong></h4>
                                     </div>
@@ -915,7 +915,7 @@
                             <a href="#" name="jqGrid-with-actions" class="title-anchor">&nbsp;</a>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><strong>jqGrid with actions</strong></h4>
                                     </div>
@@ -959,7 +959,7 @@
                             <a href="#" name="jqGrid-with-no-data" class="title-anchor">&nbsp;</a>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><strong>jqGrid with no data</strong></h4>
                                     </div>
@@ -1002,7 +1002,7 @@
                             <a href="#" name="jqGrid-with-data-formatters" class="title-anchor">&nbsp;</a>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><strong>jqGrid with data formatters</strong></h4>
                                     </div>
@@ -1053,7 +1053,7 @@
 
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><strong>jqGrid with lot of columns and data formatters</strong></h4>
                                     </div>
