--- a/demo/plugin_stats.html
+++ b/demo/plugin_stats.html
@@ -592,7 +592,7 @@
                                         <h2><strong>Value box</strong></h2>
 
                                         <div class="code-container">
-                                            <div class="row code-header no-border-top">
+                                            <div class="row flex-container code-header no-border-top">
                                                 <div class="col-xs-8 module-description">
                                                     <h4><b>Demo</b></h4>
                                                 </div>
@@ -709,7 +709,7 @@
                                         </div>
 
                                         <div class="code-container">
-                                            <div class="row code-header no-border-top">
+                                            <div class="row flex-container code-header no-border-top">
                                                 <div class="col-xs-8 module-description">
                                                     <h4><b>Pie chart</b></h4>
                                                 </div>
@@ -757,7 +757,7 @@
                                         </div>
 
                                         <div class="code-container">
-                                            <div class="row code-header no-border-top">
+                                            <div class="row flex-container code-header no-border-top">
                                                 <div class="col-xs-8 module-description">
                                                     <h4><b>Line chart</b></h4>
                                                 </div>
