--- a/demo/js_components.html
+++ b/demo/js_components.html
@@ -616,7 +616,7 @@
 
                             </div>
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><b>Default styling</b></h4>
                                     </div>
@@ -693,7 +693,7 @@
                             </div>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><b>Ajax modal</b></h4>
                                     </div>
@@ -729,7 +729,7 @@
                             </div>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><b>Modals with different sizing</b></h4>
                                     </div>
@@ -771,7 +771,7 @@
                             </div>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><b>Alert modals</b></h4>
                                     </div>
@@ -829,7 +829,7 @@
                                 </div>
                             </div>
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><b>Notification types</b></h4>
                                     </div>
@@ -902,7 +902,7 @@
                             <h2><strong>Tooltips</strong></h2>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><b>Types of tooltips</b></h4>
                                     </div>
@@ -954,7 +954,7 @@
                             <h2><strong>Popovers</strong></h2>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><b>Types of popovers</b></h4>
                                     </div>
@@ -1006,7 +1006,7 @@
                             <h2><strong>Tabs</strong></h2>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><b>Basic example</b></h4>
                                     </div>
@@ -1075,7 +1075,7 @@
                             <h2><strong>Utilities</strong></h2>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><strong>Checkboxes disguised as buttons</strong></h4>
                                     </div>
@@ -1131,7 +1131,7 @@
                             </div>
 
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><strong>Radio buttons disguised as regular buttons</strong></h4>
                                     </div>
@@ -1199,7 +1199,7 @@
                                 </div>
                             </div>
                             <div class="code-container">
-                                <div class="row code-header no-border-top">
+                                <div class="row flex-container code-header no-border-top">
                                     <div class="col-xs-8 module-description">
                                         <h4><b>Demo</b></h4>
                                     </div>
