--- a/demo/layout.html
+++ b/demo/layout.html
@@ -676,7 +676,7 @@
                                     <h2><strong>Top Navigation</strong></h2>
                                     <p><strong>The top navigation is based on the Bootstrap 3.3.5. component <a href="http://getbootstrap.com/components/#navbar" target="_blank">Navbar</a></strong></p>
                                     <div class="code-container">
-                                        <div class="row code-header no-border-top">
+                                        <div class="row flex-container code-header no-border-top">
                                             <div class="col-sm-8 module-description">
                                                 <h4><b>Basic top navigation</b></h4>
                                             </div>
@@ -732,7 +732,7 @@
 
 
                                     <div class="code-container">
-                                        <div class="row code-header">
+                                        <div class="row flex-container code-header">
                                             <div class="col-sm-8 module-description">
                                                 <h4><b>Top navigation with profile options</b></h4>
                                             </div>
@@ -802,7 +802,7 @@
 
 
                                     <div class="code-container">
-                                        <div class="row code-header">
+                                        <div class="row flex-container code-header">
                                             <div class="col-sm-8 module-description">
                                                 <h4><b>Top navigation with search bar and notifications</b></h4>
                                             </div>
@@ -893,7 +893,7 @@
 
 
                                     <div class="code-container">
-                                        <div class="row code-header">
+                                        <div class="row flex-container code-header">
                                             <div class="col-sm-8 module-description">
                                                 <h4><b>Top navigation with language selector and notifications</b></h4>
                                             </div>
