--- a/demo/plugin_wysiwyg.html
+++ b/demo/plugin_wysiwyg.html
@@ -598,7 +598,7 @@
 
 
                                         <div class="code-container">
-                                            <div class="row code-header no-border-top">
+                                            <div class="row flex-container code-header no-border-top">
                                                 <div class="col-xs-8 module-description">
                                                     <h4><b>Standard install</b></h4>
                                                 </div>
@@ -639,7 +639,7 @@
                                         </div>
 
                                         <div class="code-container">
-                                            <div class="row code-header no-border-top">
+                                            <div class="row flex-container code-header no-border-top">
                                                 <div class="col-xs-8 module-description">
                                                     <h4><b>Air mode</b></h4>
                                                 </div>
