--- a/demo/plugin_fancytree.html
+++ b/demo/plugin_fancytree.html
@@ -561,6 +561,25 @@
                     </ul>
                 </div>
             </li>
+            <li class="menu-item menu-item-has-children">
+                <a href="#">
+                    <i class="menu-icon fa fa-star"></i>
+                    <span class="menu-text">Technical details</span>
+                </a>
+                <div class="menu-item-data">
+                    <a href="#" class="menu-item-min-link">
+                        <span class="menu-text">Technical details</span>
+                    </a>
+                    <ul class="sidebar-submenu">
+                        <li class="menu-item">
+                            <a href="/emag-apps-ui-kit/demo/plugins_versions.html">
+                                <span class="menu-text">Plugins versions</span>
+                            </a>
+                        </li>
+
+                    </ul>
+                </div>
+            </li>
         </ul>
     </div>
     <div class="sidebar-control">
