Feature(Layout): Added plugins versions page

--- a/demo/plugins_versions.html
+++ b/demo/plugins_versions.html
@@ -632,7 +632,7 @@
                                         <tr>
                                             <td><a href="js_components.html#js-custom-notifications">Bootstrap notify</a></td>
                                             <td><span class="label label-info">3.1.5</span></td>
-                                            <td></td>
+                                            <td><span class="label label-warning">modified</span> <span class="label label-warning">wrapper</span></td>
                                         </tr>
                                         <tr>
                                             <td><a href="plugin_stats.html#charts">Chart</a></td>
@@ -642,7 +642,7 @@
                                         <tr>
                                             <td><a href="js_complex_form_elements.html#jsChosenJsAutocomplete">Chosen</a></td>
                                             <td><span class="label label-info">1.4.2</span></td>
-                                            <td></td>
+                                            <td><span class="label label-warning">modified</span></td>
                                         </tr>
                                         <tr>
                                             <td>Countdown<br>Using: Moment-timezone</td>
@@ -662,7 +662,7 @@
                                         <tr>
                                             <td>Drop</td>
                                             <td><span class="label label-info">1.4.1</span></td>
-                                            <td></td>
+                                            <td><span class="label label-warning">modified</span></td>
                                         </tr>
                                         <tr>
                                             <td>Dropzone</td>
@@ -672,7 +672,7 @@
                                         <tr>
                                             <td><a href="plugin_fancytree.html">Fancytree</a><br>Using: jquery.fancytree.filter.js</td>
                                             <td><span class="label label-info">2.15</span><br><span class="label label-info">2.22.0</span></td>
-                                            <td><span class="label label-warning">modified</span></td>
+                                            <td><span class="label label-warning">modified</span> <span class="label label-warning">wrapper</span></td>
                                         </tr>
                                         <tr>
                                             <td>Hierarchicalselect</td>
@@ -723,7 +723,7 @@
                                         <tr>
                                             <td><a href="plugin_jqgrid.html#jqGrid-with-sticky-panels">Sticky-kit</a></td>
                                             <td><span class="label label-info">1.1.2</span></td>
-                                            <td><span class="label label-warning">modified</span></td>
+                                            <td><span class="label label-warning">modified</span> <span class="label label-warning">wrapper</span></td>
                                         </tr>
                                         <tr>
                                             <td><a href="plugin_wysiwyg.html">Summernote</a></td>
