Feature(Layout): Added plugins versions page

--- a/demo/branding.html
+++ b/demo/branding.html
@@ -561,7 +561,7 @@
             </li>
             <li class="menu-item menu-item-has-children">
                 <a href="#">
-                    <i class="menu-icon fa fa-star"></i>
+                    <i class="menu-icon fa fa-cog"></i>
                     <span class="menu-text">Technical details</span>
                 </a>
                 <div class="menu-item-data">
