--- a/demo/plugin_wysiwyg.html
+++ b/demo/plugin_wysiwyg.html
@@ -121,7 +121,7 @@
     <div class="sidebar-outer">
         <ul class="sidebar-inner">
             <li class="menu-item menu-item-has-children">
-                <a href="#" data-href="/emag-apps-ui-kit/demo/index.html">
+                <a href="javascript:void(0)" data-href="/emag-apps-ui-kit/demo/index.html">
                     <i class="menu-icon fa fa-flag-checkered"></i>
                     <span class="menu-text">Start</span>
                 </a>
@@ -144,12 +144,12 @@
                 </div>
             </li>
             <li class="menu-item menu-item-has-children">
-                <a href="#" data-href="/emag-apps-ui-kit/demo/layout.html">
+                <a href="javascript:void(0)" data-href="/emag-apps-ui-kit/demo/layout.html">
                     <i class="menu-icon fa fa-columns"></i>
                     <span class="menu-text">Layout</span>
                 </a>
                 <div class="menu-item-data">
-                    <a href="#" data-href="/emag-apps-ui-kit/demo/layout.html" class="menu-item-min-link">
+                    <a href="javascript:void(0)" data-href="/emag-apps-ui-kit/demo/layout.html" class="menu-item-min-link">
                         <span class="menu-text">Layout</span>
                     </a>
                     <ul class="sidebar-submenu">
@@ -187,12 +187,12 @@
                 </div>
             </li>
             <li class="menu-item menu-item-has-children">
-                <a href="#" data-href="/emag-apps-ui-kit/demo/branding.html">
+                <a href="javascript:void(0)" data-href="/emag-apps-ui-kit/demo/branding.html">
                     <i class="menu-icon fa fa-paint-brush"></i>
                     <span class="menu-text">Branding</span>
                 </a>
                 <div class="menu-item-data">
-                    <a href="#" data-href="/emag-apps-ui-kit/demo/branding.html" class="menu-item-min-link">
+                    <a href="javascript:void(0)" data-href="/emag-apps-ui-kit/demo/branding.html" class="menu-item-min-link">
                         <span class="menu-text">Branding</span>
                     </a>
                     <ul class="sidebar-submenu">
@@ -220,12 +220,12 @@
                 </div>
             </li>
             <li class="menu-item menu-item-has-children">
-                <a href="#" data-href="/emag-apps-ui-kit/demo/css_components.html">
+                <a href="javascript:void(0)" data-href="/emag-apps-ui-kit/demo/css_components.html">
                     <i class="menu-icon fa fa-archive"></i>
                     <span class="menu-text">CSS Components</span>
                 </a>
                 <div class="menu-item-data">
-                    <a href="#" data-href="/emag-apps-ui-kit/demo/css_components.html" class="menu-item-min-link">
+                    <a href="javascript:void(0)" data-href="/emag-apps-ui-kit/demo/css_components.html" class="menu-item-min-link">
                         <span class="menu-text">CSS Components</span>
                     </a>
                     <ul class="sidebar-submenu">
@@ -288,17 +288,17 @@
                 </div>
             </li>
             <li class="menu-item menu-item-has-children">
-                <a href="#" data-href="/emag-apps-ui-kit/demo/js_components.html">
+                <a href="javascript:void(0)" data-href="/emag-apps-ui-kit/demo/js_components.html">
                     <i class="menu-icon fa fa-code"></i>
                     <span class="menu-text">JS Components</span>
                 </a>
                 <div class="menu-item-data">
-                    <a href="#" data-href="/emag-apps-ui-kit/demo/js_components.html" class="menu-item-min-link">
+                    <a href="javascript:void(0)" data-href="/emag-apps-ui-kit/demo/js_components.html" class="menu-item-min-link">
                         <span class="menu-text">JS Components</span>
                     </a>
                     <ul class="sidebar-submenu">
                         <li class="menu-item menu-item-has-children">
-                            <a href="#">
+                            <a href="javascript:void(0)">
                                 <span class="menu-text">Complex form elements</span>
                             </a>
                             <ul class="sidebar-submenu">
@@ -348,7 +348,7 @@
 
 
                         <li class="menu-item menu-item-has-children">
-                            <a href="#">
+                            <a href="javascript:void(0)">
                                 <span class="menu-text">jQGrid</span>
                             </a>
                             <ul class="sidebar-submenu">
@@ -482,7 +482,7 @@
                         </li>
 
                         <li class="menu-item menu-item-has-children">
-                            <a href="#">
+                            <a href="javascript:void(0)">
                                 <span class="menu-text">Stats</span>
                             </a>
                             <ul class="sidebar-submenu">
@@ -504,12 +504,12 @@
                 </div>
             </li>
             <li class="menu-item menu-item-has-children">
-                <a href="#">
+                <a href="javascript:void(0)">
                     <i class="menu-icon fa fa-star"></i>
                     <span class="menu-text">Useful Pages</span>
                 </a>
                 <div class="menu-item-data">
-                    <a href="#" class="menu-item-min-link">
+                    <a href="javascript:void(0)" class="menu-item-min-link">
                         <span class="menu-text">Useful Pages</span>
                     </a>
                     <ul class="sidebar-submenu">
@@ -519,7 +519,7 @@
                             </a>
                         </li>
                         <li class="menu-item menu-item-has-children">
-                            <a href="#">
+                            <a href="javascript:void(0)">
                                 <span class="menu-text">Error pages</span>
                             </a>
                             <ul class="sidebar-submenu">
@@ -564,12 +564,12 @@
                 </div>
             </li>
             <li class="menu-item menu-item-has-children">
-                <a href="#">
+                <a href="javascript:void(0)">
                     <i class="menu-icon fa fa-cog"></i>
                     <span class="menu-text">Technical details</span>
                 </a>
                 <div class="menu-item-data">
-                    <a href="#" class="menu-item-min-link">
+                    <a href="javascript:void(0)" class="menu-item-min-link">
                         <span class="menu-text">Technical details</span>
                     </a>
                     <ul class="sidebar-submenu">
