BugFix(Summernote): Wysiwig editor stuck in fullscreen

--- a/demo/js_complex_form_elements.html
+++ b/demo/js_complex_form_elements.html
@@ -854,7 +854,7 @@
                                 <div class="row">
                                     <div class="col-sm-4">
                                         <div class="pad-15" data-showcase="example" data-dependencies="main_style,main_script,jquery,textarea_with_input_limiter_init,input_limiter_source">
-                                            <div class="form-group">
+                                            <div class="form-group form-limited-input">
                                                 <label for="input_limiter"></label>
                                                 <textarea id="input_limiter" name="input_limiter" class="form-control fixed-width-textarea" rows="4"></textarea>
                                             </div>
